# bloodbowl

./: .env.example  .gitignore  SUMMARY_20260713.md  arm_chain_lane2b.json  arm_sideswap_null_20260715.json  bloodbowl_training.ipynb  code_review_findings.md  composer.json  config.php  diag_advance_floor_fix_ab_20260716.py  diag_advance_vs_block_harness.cpp  diag_backprop_turnover_fix.py  diag_cage_prior_fix.py  diag_expandscore_hang_fix.py  diag_first_possession.py  diag_fpu_children0_fix.py  diag_fresh_baseline_20260710.py  diag_gate_policy_prior.py  diag_h2_screens_chain.py  diag_halfclock_fix.py  diag_item10_prior_floor_ab_20260720.py  diag_item35_selection_pathA_20260724.py  diag_item35_selection_pathB_20260724.py  diag_item7_pickup_top2_ab_20260720.py  diag_kicking_team_fix.py  diag_leaf_lookahead_smoke.py  diag_negamax_fix.py  diag_null_weights.py  diag_pass_targetid_fix.py  diag_perplayer_grounding.py  diag_perplayer_phaseA.py  diag_perplayer_policy_gate_20260720.py  diag_pickup_cage_throttle.py  diag_pickup_stepcap_fix.py  diag_sideswap_null_20260715.py  diag_stall_guard_blitz.py  diag_td_mix_target_diff.py  diag_throwin_direction_fix_ab_20260716.py  diag_throwin_fix_ab_20260716.py  diag_utils.py  (+193 more)
engine/: CMakeLists.txt
engine/cli/: mcts_cli.cpp
engine/include/bb/: action_features.h  action_resolver.h  action_result.h  ball_and_chain_handler.h  ball_handler.h  ball_state.h  big_guy_handler.h  block_handler.h  board_snapshot.h  bomb_handler.h  dice.h  enums.h  feature_extractor.h  foul_handler.h  game_event.h  game_simulator.h  game_state.h  gaze_handler.h  helpers.h  injury.h  kickoff_handler.h  macro_actions.h  macro_mcts.h  mcts.h  move_handler.h  pass_handler.h  (+12 more)
engine/python/: bb_module.cpp  test_bb_engine.py
engine/src/: action_features.cpp  action_resolver.cpp  ball_and_chain_handler.cpp  ball_handler.cpp  big_guy_handler.cpp  block_handler.cpp  board_snapshot.cpp  bomb_handler.cpp  dice.cpp  feature_extractor.cpp  foul_handler.cpp  game_simulator.cpp  game_state.cpp  gaze_handler.cpp  helpers.cpp  injury.cpp  kickoff_handler.cpp  macro_actions.cpp  macro_mcts.cpp  mcts.cpp  move_handler.cpp  pass_handler.cpp  pathfinder.cpp  policies.cpp  policy_network.cpp  position.cpp  roster.cpp  rules_engine.cpp  ttm_handler.cpp  turn_handler.cpp  value_function.cpp
engine/tests/: test_action_features.cpp  test_action_resolver.cpp  test_ball_and_chain_handler.cpp  test_ball_handler.cpp  test_big_guy_handler.cpp  test_block_handler.cpp  test_bomb_handler.cpp  test_dice.cpp  test_enums.cpp  test_feature_extractor.cpp  test_foul_handler.cpp  test_game_simulator.cpp  test_game_state.cpp  test_gaze_handler.cpp  test_helpers.cpp  test_injury.cpp  test_kickoff_handler.cpp  test_macro_actions.cpp  test_macro_mcts.cpp  test_mcts.cpp  test_move_handler.cpp  test_pass_handler.cpp  test_player.cpp  test_policy_network.cpp  test_position.cpp  test_rules_engine.cpp  test_ttm_handler.cpp  test_value_function.cpp
(+312 files in other folders)
